# CubeWorld-Cracker

./: CWDownload.py  CubeCrack.py  LauncherCrack.py  README.md
Cpp version/: CubeCrack.cpp  LauncherCrack.cpp
PowerShell version/: CubeCrack.ps1  LauncherCrack.ps1
Python Version 2/: Install.py
Python version/: CubeCrack.py  LauncherCrack.py
Version 1/: README.md
Version 1/Cpp version/: CubeCrack.cpp
Version 1/PowerShell version/: CubeCrack.ps1  readme.md
Version 2.2/: CWDownload.py
Version 2.2/rust/cubeworld_cracker/: Cargo.toml
Version 2.2/rust/cubeworld_cracker/src/: main.rs
