[package]
name = "cubeworld_cracker"
version = "0.1.0"
authors = ["ChrisMiuchiz <ChrisMiuchiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.3.1"
serde_derive = "1.0.92"
serde = "1.0.92"
reqwest = "0.9.17"
flate2 = "1.0.7"